--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
-  <body>
-    <h1>Mій перший сайт на Github</h1>
+  <head>
+    <title>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</title>
+  </head>
+  <body style="background-color: rgb(100, 100, 200) font-family: Arial;;">
+    <header style="background-color: white;">
+      <h1>Mій перший сайт на Github</h1>
+    </header>
+
+    <main>
+      <p>Content</p>
+    </main>
+
+    <footer>
+      <p>Contacts</p>
+    </footer>
+
   </body>
 </html>
       
