--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <html>
   <head>
-    <title>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</title>
+    <title></title>
   </head>
-  <body style="background-color: rgb(100, 100, 200) font-family: Arial;;">
+  <body style="background-color: rgb(100, 100, 200); font-family: Arial;">
     <header style="background-color: white;">
       <h1>Mій перший сайт на Github</h1>
+      <h2>Тут я расскажу вам кто такая Надя и про нашу супер мега дружбу</h2>
     </header>
 
     <main>
-      <p>Content</p>
+      <p>Мы познакомились с ней через знакомых и потом мы попали в один класс но из за киры мы не сильно общались (из за киры надя не могла общаться с другими) но все равно мы ходили гулять и кира умерла от ревности, но потом наден папа сказал что у него камандировка и она уехала в Италию.Сказать что я была расстроена это нечего не сказать. Но не смотря не на что мы общаемся.
+     </p>
+      <img src="вставить картинку">
+      <p>Но сейчас будут подробнее про наши истории.Год назад в 5 классе у нас с кирой были очень плохии отношения(мы друг друга терпеть не могли)и когда Кира назвала меня не очень культурно, Надя отругала Киру и меня потдержала (за это я ей очень благодарна) Поэтому не когда не говорите что Надя плохой человек </p>
+      
     </main>
 
     <footer>
-      <p>Contacts</p>
+      <p>подвал</p>
     </footer>
 
   </body>
 </html>
-      
