--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     </header>
 
     <main>
-      <p>Мы познакомились с ней через знакомых и потом мы попали в один класс но из за киры мы не сильно общались (из за киры надя не могла общаться с другими) но все равно мы ходили гулять и кира умерла от ревности, но потом наден папа сказал что у него камандировка и она уехала в Италию.Сказать что я была расстроена это нечего не сказать. Но не смотря не на что мы общаемся.
+      <p>Мы познакомились с ней через знакомых и потом мы попали в один класс но из за киры мы не сильно общались (из за киры надя не могла общаться с другими) но все равно мы ходили гулять, но потом наден папа сказал что у него камандировка и она уехала в Италию.Сказать что я была расстроена это нечего не сказать. Но не смотря не на что мы общаемся.
      </p>
-      <img src="вставить картинку">
+      <img src="https://learn.logikaschool.com/uploads/student/3136120/672f53fbdd523.jpg" width="100px">
+  
       <p>Но сейчас будут подробнее про наши истории.Год назад в 5 классе у нас с кирой были очень плохии отношения(мы друг друга терпеть не могли)и когда Кира назвала меня не очень культурно, Надя отругала Киру и меня потдержала (за это я ей очень благодарна) Поэтому не когда не говорите что Надя плохой человек </p>
       
     </main>
 
     <footer>
-      <p>подвал</p>
+      <p>надя самій лучший человек и я всегда буду ее благодорить за ее поступок и ее потдержку.Поєтому всем пока спасибо что єто все прочитали.</p>
     </footer>
 
   </body>
 </html>
+
