--- a/index.html
+++ b/index.html
@@ -1,26 +1,119 @@
+  <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-  </head>
-  <body style="background-color: rgb(100, 100, 200); font-family: Arial;">
-    <header style="background-color: white;">
-      <h1>Mій перший сайт на Github</h1>
-      <h2>Тут я расскажу вам кто такая Надя и про нашу супер мега дружбу</h2>
-    </header>
+<head>
+  <title>Мой сайт про Надю</title> 
+  <style>
+    body {
+      background-color: rgb(220, 255, 251);
+      font-family: Courier;
+    }
 
-    <main>
-      <p>Мы познакомились с ней через знакомых и потом мы попали в один класс но из за киры мы не сильно общались (из за киры надя не могла общаться с другими) но все равно мы ходили гулять, но потом наден папа сказал что у него камандировка и она уехала в Италию.Сказать что я была расстроена это нечего не сказать. Но не смотря не на что мы общаемся.
-     </p>
-      <img src="https://learn.logikaschool.com/uploads/student/3136120/672f53fbdd523.jpg" width="100px">
-  
-      <p>Но сейчас будут подробнее про наши истории.Год назад в 5 классе у нас с кирой были очень плохии отношения(мы друг друга терпеть не могли)и когда Кира назвала меня не очень культурно, Надя отругала Киру и меня потдержала (за это я ей очень благодарна) Поэтому не когда не говорите что Надя плохой человек </p>
-      
-    </main>
+    header {
+      background-color: white;
+      text-align: center; /* Центрируем заголовки */
+    }
 
-    <footer>
-      <p>надя самій лучший человек и я всегда буду ее благодорить за ее поступок и ее потдержку.Поєтому всем пока спасибо что єто все прочитали.</p>
-    </footer>
+    main {
+      padding: 20px; /* Добавим отступы внутри main */
+    }
 
-  </body>
+
+    table {
+      width: 50%;
+      margin: 20px auto;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #f0f0f0;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      padding: 10px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>мой сайт про Надю ㋛ </h1>
+    <h2>Тут я расскажу вам кто такая Надя и про нашу супер мега дружбу</h2>
+  </header>
+
+  <main>
+    <p>Мы познакомились с ней через знакомых и потом мы попали в один класс, но из-за Киры мы не сильно общались (из-за Киры Надя не могла общаться с другими), но все равно мы ходили гулять. Потом Надин папа сказал, что у него командировка, и она уехала в Италию. Сказать, что я была расстроена - это ничего не сказать. Но, несмотря ни на что, мы общаемся.</p>
+   <p style="text-align: center">
+     <img src="https://learn.logikaschool.com/uploads/student/3136120/672f53fbdd523.jpg" width="100px">
+    <img src="https://i.postimg.cc/50WCJVsP/Nadya228.jpg" width="100px">
+    <img src="https://i.postimg.cc/wTRgXmqm/Nadyapypsik.jpg" width="100px">
+    </p>
+
+    <p>Но сейчас будут подробнее про наши истории. Год назад в 5 классе у нас с Кирой были очень плохие отношения (мы друг друга терпеть не могли), и когда Кира назвала меня не очень культурно, Надя отругала Киру и меня поддержала (за это я ей очень благодарна). Поэтому никогда не говорите, что Надя плохой человек.</p> 
+
+    <h1>Топ моих любимых аниме</h1>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Место</th>
+          <th>Название</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Магическая битва</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Бродячие псы</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Семья Шпионов</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h1>Топ любимых аниме Нади</h1>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Место</th>
+          <th>Название</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Дневник смерти</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Девушки и танки</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Семья шпионов</td>
+        </tr>
+      </tbody>
+    </table>
+
+  </main>
+
+  <footer>
+    <p>Этот сайт про Надю и нашу дружбу, вот её номер +380 50 188 07 57</p>
+  </footer>
+
+</body>
 </html>
 
