--- a/index.html
+++ b/index.html
@@ -1,119 +1,40 @@
-  <!DOCTYPE html>
 <html>
-<head>
-  <title>Мой сайт про Надю</title> 
-  <style>
-    body {
-      background-color: rgb(220, 255, 251);
-      font-family: Courier;
-    }
-
-    header {
-      background-color: white;
-      text-align: center; /* Центрируем заголовки */
-    }
-
-    main {
-      padding: 20px; /* Добавим отступы внутри main */
-    }
-
-
-    table {
-      width: 50%;
-      margin: 20px auto;
-      border-collapse: collapse;
-    }
-
-    th, td {
-      padding: 10px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-
-    th {
-      background-color: #f0f0f0;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 20px;
-      padding: 10px;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>мой сайт про Надю ㋛ </h1>
-    <h2>Тут я расскажу вам кто такая Надя и про нашу супер мега дружбу</h2>
-  </header>
-
-  <main>
-    <p>Мы познакомились с ней через знакомых и потом мы попали в один класс, но из-за Киры мы не сильно общались (из-за Киры Надя не могла общаться с другими), но все равно мы ходили гулять. Потом Надин папа сказал, что у него командировка, и она уехала в Италию. Сказать, что я была расстроена - это ничего не сказать. Но, несмотря ни на что, мы общаемся.</p>
-   <p style="text-align: center">
-     <img src="https://learn.logikaschool.com/uploads/student/3136120/672f53fbdd523.jpg" width="100px">
-    <img src="https://i.postimg.cc/50WCJVsP/Nadya228.jpg" width="100px">
-    <img src="https://i.postimg.cc/wTRgXmqm/Nadyapypsik.jpg" width="100px">
-    </p>
-
-    <p>Но сейчас будут подробнее про наши истории. Год назад в 5 классе у нас с Кирой были очень плохие отношения (мы друг друга терпеть не могли), и когда Кира назвала меня не очень культурно, Надя отругала Киру и меня поддержала (за это я ей очень благодарна). Поэтому никогда не говорите, что Надя плохой человек.</p> 
-
-    <h1>Топ моих любимых аниме</h1>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Место</th>
-          <th>Название</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Магическая битва</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Бродячие псы</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Семья Шпионов</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h1>Топ любимых аниме Нади</h1>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Место</th>
-          <th>Название</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Дневник смерти</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Девушки и танки</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Семья шпионов</td>
-        </tr>
-      </tbody>
-    </table>
-
-  </main>
-
-  <footer>
-    <p>Этот сайт про Надю и нашу дружбу, вот её номер +380 50 188 07 57</p>
-  </footer>
-
-</body>
+    <body>
+        <header>
+            <a href="#price">Прайс-лист</a> <a href="#reviews">Відгуки</a> <a href="#photos">Фотографії</a>
+        </header>
+        <main>
+            <h1>Phone Repair<br/><img src="/uploads/2020/11/soldering-5117508_1280_0_1605278553.png" width="200px"/> <img src="/uploads/2020/11/tool-145376_1280_0_1605278554.png" width="200px"/> <img src="/uploads/2020/11/guy-1424911_1280_0_1605278554.png" width="200px" height="190px"/></h1>
+            <h2 id="price">Послуги та ціни</h2>
+            <table>
+                <tr>
+                    <td>Назва послуги</td>
+                    <td>Ціна</td>
+                    <td>Термін виконання</td>
+                </tr>
+                <tr>
+                    <td>Заміна роз'єму <br/>зарядки</td>
+                    <td>250 грн.</td>
+                    <td>1 день</td>
+                </tr>
+                <tr>
+                    <td>Заміна екрану</td>
+                    <td>від 500 грн.</td>
+                    <td>від 2-х днів</td>
+                </tr>
+                <tr>
+                    <td>Перепрошивка</td>
+                    <td>від 400 грн.</td>
+                    <td>1 день</td>
+                </tr>
+            </table>
+            <h2 id="reviews">Відгуки</h2>
+            <p><i>Наталя: </i>Зламався роз'єм для заряджання в новому iPhone. Полагодили оперативно. Була в офісі на Ремонтній вулиці.</p>
+            <p><i>Максим: </i>Потрібно було рятувати телефон від вірусів. Думав все - втрачу і дані, і телефон. Дякую хлопцям на проспекті Прогресу – дані витягли, телефон відновили.</p>
+            <p><i>Юля: </i>Розбила екран планшета і одразу побігла до майстерні на Ремонтній вулиці. Правда екрану для моєї моделі не було, але хлопці зробили замовлення і телефон отримала через три дні.</p>
+            <h2 id="photos">Фотографії</h2>
+            <img src="/uploads/2020/11/broken-3653897_1920_0_1605280313.jpg" height="250px"/> <img src="/uploads/2020/11/mobile-phone-2510529_1920_0_1605280314.jpg" height="250px"/><br/>
+            <img src="/uploads/2020/11/mobile-phone-4381895_1920_0_1605280472.jpg" width="790px"/>
+        </main>
+    </body>
 </html>
-
