--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet"href="style.css"/>
     <body>
         <header>
             <a href="#price">Прайс-лист</a> <a href="#reviews">Відгуки</a> <a href="#photos">Фотографії</a>
